# deepfake-detect

./: .gitignore  laanet.py  main.py  pyproject.toml  requirements.txt
configs/: dev.yaml  dev_collator.yaml  dev_video.yaml  fft.yaml  gravex.yaml  gravex_no_period.yaml  gravex_openfake.yaml  qlora_gravex_openfake.yaml  qwen3_4b_gravex_no_period.yaml  streaming_gravex_openfake.yaml
scripts/: dev.sh  train.sh  train_stream.sh
src/: infer.py  main.py  main_streaming.py
src/utils/: merge_peft.py
